Fixed layout issues.

--- a/src/components/NavBar/NavBar.css
+++ b/src/components/NavBar/NavBar.css
@@ -1,6 +1,7 @@
 .NavBar .appBar {
     position: absolute;
     z-index: 9999;
+    justify-content: space-between;
 }
 
 @media all and (max-width: 959px) {
