--- a/src/containers/App/App.css
+++ b/src/containers/App/App.css
@@ -16,33 +16,11 @@
     display: flex;
 }
 
-.App .content {
-    width: 100%;
-}
-
-.App .flex {
-    flex: 1;
-}
 
 .App .menuButton {
     margin-left: -12px;
     margin-right: 20px;
 }
-
-.App footer {
-    border-top: 1px solid #c7c6cc;
-    display: flex;
-    justify-content: space-between;
-}
-
-.App footer p {
-    margin: 1em;
-}
-
-.App .toolbar {
-  min-height: 64px;
-}
-
 
 .App .secondary {
     color: #ff1744;
