--- a/src/containers/Maintenance/Maintenance.css
+++ b/src/containers/Maintenance/Maintenance.css
@@ -1,14 +1,22 @@
 .Maintenance {
     height: 100%;
+    width: 100%;
+}
+
+.Maintenance .loader {
+    display: flex;
+    justify-content: center;
+    vertical-align: center;
+    align-items: center;
 }
 
 .Maintenance .toolbox {
     display: flex;
     -ms-flex-pack: end;
     justify-content: flex-end;
-    min-height: 64px;
+    -ms-flex-align: center;
     align-items: center;
-    padding: 1em 2em;
+    margin-top: 3em;
 }
 
 .Maintenance .card {
